apps/base/kiali/virtualservices.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - kiali.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
